--- a/css/main.css
+++ b/css/main.css
@@ -17,15 +17,13 @@ rose : #E33849*/
 
 
 /***********Mise en page générale*********************/
-h1 {
-  font-family: "spotlight";
-}
 
 body > div {
   background-color: #3F4847;
   /*background-size: cover;*/
   height: 700px;
   display: flex;
+  height: 100vh;
 }
 
 .logo {
@@ -40,18 +38,23 @@ body > div {
   background-image: url("../img/logo3.png");
 }
 
+
+
 /****************HEADER ******************************/
 
 h1 {
+  font-family: "spotlight";
   text-align: center;
   position: absolute;
-  top: 400px;
-  left: -3%;
+  top: 300px;
+  left: -2%;
   width: 100%;
   color: white;
   font-size: 6em;
-  font-weight: lighter;
+  /*font-weight: lighter;*/
+  letter-spacing: 1px;
 }
+
 /****************Accueil******************************/
 
 /****************Présentation*************************/
@@ -102,4 +105,7 @@ $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
 
 @media (min-width: 900px) {
 
+h1 {
+  /*left: -2%;*/
+}
 }
