--- a/css/main.css
+++ b/css/main.css
@@ -18,9 +18,11 @@ rose : #E33849*/
 
 /***********Mise en page générale*********************/
 
+body {
+  font-family: arial;
+}
 body > div {
   background-color: #3F4847;
-  /*background-size: cover;*/
   height: 700px;
   display: flex;
   height: 100vh;
@@ -39,7 +41,33 @@ body > div {
 }
 
 
+h2 {
+  color: #3F4847;
+  font-weight: lighter;
+  text-align: center;
+  margin-bottom: 5px;
+}
 
+h2 span {
+  color: #E33849;
+  font-size: 2.5em;
+  font-family: "spotlight";
+  position: relative;
+  top: 5px;
+  font-weight: bold;
+}
+
+hr {
+  color: #E33849;
+  /*height: 5px;*/
+  border: none;
+  margin-top: 0;
+  margin-bottom: 0;
+  border-bottom: 3px solid #E33849;
+  /*border: 2px solid yellow;*/
+  min-width: 140px;
+  width: 20%;
+}
 /****************HEADER ******************************/
 
 h1 {
@@ -47,7 +75,7 @@ h1 {
   text-align: center;
   position: absolute;
   top: 300px;
-  left: -2%;
+  left: -6%;
   width: 100%;
   color: white;
   font-size: 6em;
@@ -83,6 +111,11 @@ $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
 
 @media (min-width: 600px) {
 
+
+  h1 {
+    left: -4%;
+  }
+
 }
 
 
@@ -105,7 +138,7 @@ $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
 
 @media (min-width: 900px) {
 
-h1 {
-  /*left: -2%;*/
-}
+  h1 {
+    left: -2%;
+  }
 }
