--- a/css/main.css
+++ b/css/main.css
@@ -21,15 +21,15 @@ rose : #E33849*/
 body {
   font-family: arial;
 }
+
 body > div {
   background-color: #3F4847;
-  height: 700px;
   display: flex;
   height: 100vh;
 }
 
 .logo {
-  width: 200px;
+  width: 160px;
   height: 200px;
   margin: auto;
   display: block;
@@ -59,15 +59,15 @@ h2 span {
 
 hr {
   color: #E33849;
-  /*height: 5px;*/
   border: none;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin-top: -20px;
+  margin-top: 5px;
+  margin-bottom: 50px;
   border-bottom: 3px solid #E33849;
-  /*border: 2px solid yellow;*/
   min-width: 140px;
   width: 20%;
 }
+
 /****************HEADER ******************************/
 
 h1 {
@@ -75,7 +75,7 @@ h1 {
   text-align: center;
   position: absolute;
   top: 300px;
-  left: -6%;
+  left: -4%;
   width: 100%;
   color: white;
   font-size: 6em;
@@ -113,7 +113,7 @@ $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
 
 
   h1 {
-    left: -4%;
+    left: -1%;
   }
 
 }
@@ -139,6 +139,6 @@ $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
 @media (min-width: 900px) {
 
   h1 {
-    left: -2%;
+    left: -1%;
   }
 }
