--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,6 @@ h2 span {
 hr {
   color: #E33849;
   border: none;
-  margin-top: -20px;
   margin-top: 5px;
   margin-bottom: 50px;
   border-bottom: 3px solid #E33849;
@@ -89,6 +88,58 @@ h1 {
 
 /****************Réalisation**************************/
 
+/*CAROUSEL */
+.realisation .carousel {
+  /*justify-content: center;*/
+  /*align-items: center;*/
+  margin: auto;
+  padding: 0;
+  display: flex;
+  /*max-height: 500px;*/
+  /*width: 100%;*/
+  max-width: 500px;
+  overflow: hidden;
+  /*border-bottom: 3px solid #3F4847;*/
+  /*border-top: 3px solid #3F4847;*/
+  position: relative;
+}
+
+.realisation img {
+  margin: 0 1px;
+  min-width: 100%;
+  height: 100%;
+}
+
+.carousel .carouselslide {
+  left: 0px;
+	position: relative;
+	min-width: 100%;
+  max-height: 500px;
+	margin: 0;
+  padding: 0;
+	/*padding: 0;*/
+	display: flex;
+
+	/*CSS3 keyframes animation*/
+	animation-name: AutoSlide;
+	animation-duration: 36s;
+	animation-iteration-count: infinite;
+	animation-timing-function: ease-in-out;
+}
+
+@keyframes AutoSlide {
+100%, 0%, 5% {left: 0px; /*1ère image*/}
+11.11%, 16% {left: -100.5%; /*2ème image*/}
+22.22%, 27% {left: -201%; /*3ème image*/}
+33.33%, 38% {left: -301.5%; /*4ème image*/}
+44.44%, 49% {left: -402%; /*5ème image*/}
+55.55%, 60% {left: -502.5%; /*6ème image*/}
+66.66%, 71% {left: -603%; /*7ème image*/}
+77.77%, 82% {left: -703.5%; /*8ème image*/}
+88.88%, 98% {left: -804%; /*9ème image*/}
+}
+
+
 /****************Prestations**************************/
 
 /****************Equipe*******************************/
@@ -116,6 +167,61 @@ $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
     left: -1%;
   }
 
+
+
+  /****************Réalisation**************************/
+
+  /*CAROUSEL */
+  .realisation .carousel {
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    margin: auto;
+    padding: 0;
+    display: flex;
+    /*max-height: 500px;*/
+    /*width: 100%;*/
+    max-width: 1500px;
+    overflow: hidden;
+    border:  1px solid red;
+    /*border-bottom: 3px solid #3F4847;*/
+    /*border-top: 3px solid #3F4847;*/
+    position: relative;
+  }
+
+  .realisation img {
+    margin: 0 1px;
+    min-width: 100%;
+    height: 100%;
+  }
+
+  .carousel .carouselslide {
+    left: 0px;
+  	position: relative;
+  	min-width: 100%;
+    max-height: 500px;
+  	margin: 0;
+    padding: 0;
+  	/*padding: 0;*/
+  	display: flex;
+
+  	/*CSS3 keyframes animation*/
+  	animation-name: AutoSlide;
+  	animation-duration: 36s;
+  	animation-iteration-count: infinite;
+  	animation-timing-function: ease-in-out;
+  }
+
+  @keyframes AutoSlide {
+  100%, 0%, 5% {left: 0px; /*1ère image*/}
+  11.11%, 16% {left: -100.5%; /*2ème image*/}
+  22.22%, 27% {left: -201%; /*3ème image*/}
+  33.33%, 38% {left: -301.5%; /*4ème image*/}
+  44.44%, 49% {left: -402%; /*5ème image*/}
+  55.55%, 60% {left: -502.5%; /*6ème image*/}
+  66.66%, 71% {left: -603%; /*7ème image*/}
+  77.77%, 82% {left: -703.5%; /*8ème image*/}
+  88.88%, 98% {left: -804%; /*9ème image*/}
+  }
 }
 
 
@@ -141,4 +247,5 @@ $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
   h1 {
     left: -1%;
   }
+
 }
