--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,8 @@ rose : #E33849*/
 
 body {
   font-family: arial;
+  letter-spacing: 1px;
+  color: #3F4847;
 }
 
 body > div {
@@ -65,6 +67,7 @@ hr {
   min-width: 140px;
   width: 20%;
 }
+
 
 /****************HEADER ******************************/
 
@@ -200,7 +203,7 @@ header nav ul {
 
 
 
-/************* ***Accueil******************************/
+/****************Accueil******************************/
 
 /****************Présentation*************************/
 
@@ -264,8 +267,56 @@ header nav ul {
 
 /****************Equipe*******************************/
 
-/****************Contact******************************/
+.equipe div {
+  display: flex;
+  flex-flow: row wrap;
+  width: 100%;
+  justify-content: center;
+}
 
+.equipe figure {
+  width: 250px;
+  height: auto;
+  text-align: center;
+}
+
+.equipe .equipedetail {
+  height: 0px;
+  border-right: 3px solid  #E33849;
+  overflow: hidden;
+  transition: 0.6s;
+}
+
+.equipe figure img {
+  overflow: hidden;
+  border: 3px solid gray;
+  border-radius: 150px;
+  width: 100%;
+}
+
+.equipe figcaption:first-child {
+  font-weight: 600;
+}
+
+.equipe figure:hover .equipedetail {
+  height: 70px;
+  min-width: 100%;
+  /*border-top : 3px solid #E33849;*/
+}
+
+.equipe span {
+  font-family: 'spotlight';
+  font-size: 3em;
+  font-weight: lighter;
+  color: #E33849;
+  margin-right: 5px;
+  letter-spacing: 0px;
+  position: relative;
+  top: 4px;
+}
+
+
+/****************Contact******************************/
 
 
 
