--- a/css/main.css
+++ b/css/main.css
@@ -82,28 +82,28 @@ h1 {
 
 /****************Menu******************************/
 .menu input {
-  /*position: fixed;*/
-  /*left: 50%;*/
+  position: fixed;
+  left: 50%;
 }
 
 .menu {
-  /*position: fixed;*/
+  position: fixed;
   z-index: 2;
   /*width: 200px;*/
 }
 
-.burger-menu ul:nth-child(1) {
-  background-color: #3F4847;
-}
+/*.burger-menu ul:nth-child(1) {*/
+  /*background-color: #3F4847;*/
+/*}*/
 
 #social ul {
   background-color: none;
   border-top: none;
-  margin-right: 25px;
+  /*margin-right: 25px;*/
 }
 
 #social i {
-  margin-right: 15px;
+  /*margin-right: 15px;*/
 }
 
 header nav ul {
@@ -117,12 +117,14 @@ header nav ul {
 
 .burger-menu ul {
   display: none;
-  height: 0px;
+  /*height: auto;*/
+  flex-flow: row wrap;
+  max-width: 100%;
 }
 
 .hamburger {
   display: flex;
-  position: absolute;
+  position: fixed;
   justify-content: center!important;
   margin: auto;
   bottom: 5px;
@@ -131,13 +133,13 @@ header nav ul {
 
 .hamburger i {
   font-size: 2.5em;
-  color: white;
+  color: #E33849;
 }
 
 .burger-menu {
-  height: 1px;
+  height: 150px;
   position: absolute;
-  bottom: 0px;
+  bottom: 0;
   background-color:  #3F4847;
   font-size: 1.4em;
 }
@@ -145,26 +147,26 @@ header nav ul {
 /*après le clic */
 
 .burger-shower:checked ~ .burger-menu {
- height: 125px;
+ height: 145px;
  width: 100%;
  padding: 0px;
  margin: 0px;
  text-align: center;
  color: white;
  transition: 1s;
- display: flex;
- justify-content: space-around;
  position: inherit;
- margin-top: -120px;
+ /*margin-top: -80px;*/
 }
 
-.burger-shower:checked ~ .burger-menu ul {
-  display: block;
+.burger-shower:checked ~ .burger-menu>ul {
+  display: flex;
   height: auto;
   align-items: stretch;
   padding-left: 0;
   position: inherit;
-  margin-top: -20px;
+  margin-top: 0;
+  justify-content: space-around;
+  width: 100%;
 }
 
 .burger-menu ul:hover {
@@ -173,7 +175,7 @@ header nav ul {
 
 .burger-shower:checked ~ .hamburger {
   bottom : 150px;
-  position: absolute;
+  position: fixed;
   text-align: center;
   transition: 1s;
 }
@@ -183,20 +185,29 @@ header nav ul {
   color: white;
   font-family: arial;
   margin-left: 0;
+  width: 100%;
 }
 
-.burger-menu li {
-  display: inline-flex;
+.burger-menu>ul li {
+  display: flex;
+  align-items: center;
   line-height: 35px;
+  min-width: 48%;
+  /*text-align: center;*/
 }
 
-.burger-menu ul li:nth-child(1) {
-  margin-left: 46px;
+.burger-menu ul ul{
+  display: flex;
+  flex-flow: row nowrap;
 }
 
-.burger-menu ul li:nth-child(6) {
-  margin-right: 43px;
-}
+/*.burger-menu ul li:nth-child(1) {*/
+  /*margin-left: 46px;*/
+/*}*/
+
+/*.burger-menu ul li:nth-child(6) {*/
+  /*margin-right: 43px;*/
+/*}*/
 
 
 
