--- a/css/main.css
+++ b/css/main.css
@@ -92,25 +92,15 @@ h1 {
 .menu {
   position: fixed;
   z-index: 2;
-  /*width: 200px;*/
 }
-
-/*.burger-menu ul:nth-child(1) {*/
-  /*background-color: #3F4847;*/
-/*}*/
 
 #social ul {
   background-color: none;
   border-top: none;
-  /*margin-right: 25px;*/
 }
 
 #social i {
-  /*margin-right: 15px;*/
-}
-
-header nav ul {
- list-style-type: none;
+  margin-right: 10px;
 }
 
 /*avant le clic*/
@@ -120,9 +110,9 @@ header nav ul {
 
 .burger-menu ul {
   display: none;
-  /*height: auto;*/
   flex-flow: row wrap;
   max-width: 100%;
+  list-style-type: none;
 }
 
 .hamburger {
@@ -130,8 +120,9 @@ header nav ul {
   position: fixed;
   justify-content: center!important;
   margin: auto;
-  bottom: 5px;
+  bottom: 0;
   width: 100%;
+  background-color: #3F4847;
 }
 
 .hamburger i {
@@ -158,7 +149,6 @@ header nav ul {
  color: white;
  transition: 1s;
  position: inherit;
- /*margin-top: -80px;*/
 }
 
 .burger-shower:checked ~ .burger-menu>ul {
@@ -181,6 +171,7 @@ header nav ul {
   position: fixed;
   text-align: center;
   transition: 1s;
+  background-color: transparent;
 }
 
 .burger-menu ul a {
@@ -196,22 +187,12 @@ header nav ul {
   align-items: center;
   line-height: 35px;
   min-width: 48%;
-  /*text-align: center;*/
 }
 
 .burger-menu ul ul{
   display: flex;
   flex-flow: row nowrap;
 }
-
-/*.burger-menu ul li:nth-child(1) {*/
-  /*margin-left: 46px;*/
-/*}*/
-
-/*.burger-menu ul li:nth-child(6) {*/
-  /*margin-right: 43px;*/
-/*}*/
-
 
 
 /****************Accueil******************************/
