--- a/css/main.css
+++ b/css/main.css
@@ -258,19 +258,20 @@ h1 {
 
 
 /****************Prestations**************************/
-.prestation {
+.prestation div {
+  margin: auto;
   display: flex;
-  /*justify-content: space-around;*/
-  /*align-content: space-around;*/
-  /*text-align: center;*/
-  padding-bottom: 20px;
   width: 100%;
   flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: space-around;
+  /*position: relative;*/
 }
 
 .packages {
   color: gray;
   width: 80%;
+  height: 500px;
   margin: auto;
   margin-bottom: 30px;
   border: 1px solid #e5e5e5;
@@ -279,6 +280,8 @@ h1 {
   padding: 24px;
   /*z-index: 1;*/
   font-family: arial;
+/*  display: flex;
+  flex-flow: row wrap;*/
 }
 
 .packages span {
@@ -292,10 +295,10 @@ h1 {
   color: black;
   font-size: 10px;
   line-height: 24px;
-  z-index: 2;
+  z-index: 1;
 }
 
-.packages div::before {
+/*.packages div::before {
   display: block;
   position: absolute;
   top: 38%;
@@ -305,7 +308,7 @@ h1 {
   background-color: #e5e5e5;
   content: '';
   z-index: 1;
-}
+}*/
 
 .packages:hover {
   transform: scale(1.05);
@@ -326,17 +329,35 @@ h1 {
 
 .packages ul {
   list-style-type: none;
-  padding: 0;
+  padding-bottom: 20px;
   line-height: 1.8;
+  border-bottom: 1px solid #e5e5e5;
+  width: 90%;
+  /*margin-left: -24px;*/
 }
 
 .packages button {
+  border: 1px solid #e5e5e5;
   border-radius: 4px;
   background-color: #E33849;
   color: #3F4847;
   font-weight: bold;
   height: 48px;
-  border: 1px solid #E33849;
+  /*display: flex;
+  justify-content: center;*/
+}
+
+.packages button:hover {
+  background-color: #C72C48;
+}
+
+.packages ul li em::before {
+  content: none;
+}
+
+.packages p {
+  padding-bottom: 20px;
+  border-bottom: 1px solid #e5e5e5;
 }
 
 /****************Equipe*******************************/
@@ -457,12 +478,14 @@ $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
   33.33%, 48% {left: -100%; /*image 4, 5, 6*/}
   66.66%, 81% {left: -200%; /*image 7, 8, 9*/}
   }
+
+
+/********************Prestations*************/
+.packages {
+  width: 40%
 }
 
-
-
-
-
+}
 
 
 
@@ -482,5 +505,10 @@ $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
   h1 {
     left: -1%;
   }
+
+  /********************Prestations*************/
+.packages {
+  width: 18%;
+}
 
 }
