--- a/css/main.css
+++ b/css/main.css
@@ -271,7 +271,7 @@ h1 {
 .packages {
   color: gray;
   width: 80%;
-  height: 500px;
+  height: 480px;
   margin: auto;
   margin-bottom: 30px;
   border: 1px solid #e5e5e5;
@@ -329,10 +329,12 @@ h1 {
 
 .packages ul {
   list-style-type: none;
-  padding-bottom: 20px;
+  /*padding-bottom: 20px;*/
   line-height: 1.8;
   border-bottom: 1px solid #e5e5e5;
   width: 90%;
+  /*padding-left: 10px;*/
+  padding: 0 0 20px 10px;
   /*margin-left: -24px;*/
 }
 
@@ -343,6 +345,9 @@ h1 {
   color: #3F4847;
   font-weight: bold;
   height: 48px;
+  width: 50%;
+  /*margin-left: 20%;*/
+  margin: 10% 0 0 20%;
   /*display: flex;
   justify-content: center;*/
 }
