--- a/css/main.css
+++ b/css/main.css
@@ -540,51 +540,53 @@ $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
   width: 40%
 }
 
-}
 
-/*$$$$$$$$$TABLET BIS$$$$$$$$$$$$*/
-@media (min-width: 800px) {
 
-  /********************Contact*************/
+/********************Contact****************/
 
 .formulaire input, .formulaire textarea {
-  width: 100%;
+width: 100%;
 }
 
 .formulaire input[name="bouton"] {
-  left: 5%;
+left: 5%;
+width: 100px;
 }
 
 .formulaire select {
-  width: 50%;
+width: 50%;
 }
 
 .formulaire {
-  display: flex;
+display: flex;
 }
 
 .line {
-  /*display: inline-block;*/
-  width: 35%;
-  border-right: 4px solid #E33849;
-  padding-right: 13%;
+/*display: inline-block;*/
+width: 35%;
+border-right: 4px solid #E33849;
+padding-right: 13%;
 }
 
 .line input  {
-  width: 100%;
+width: 100%;
 }
 
 .formulaire ul {
-  display: inline-block;
-  width: 35%;
-  padding-left: 0;
+display: inline-block;
+width: 35%;
+padding-left: 0;
+/*margin-left: 15%;*/
+margin: 65px auto auto 15%;
 }
 
 .formulaire li i {
-  left: 68%;
+left: 65%;
 }
 
+
 }
+
 
 
 
