--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,7 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
 h2 {
   color: #3F4847;
   font-weight: lighter;
@@ -80,7 +81,7 @@ h1 {
   font-family: "spotlight";
   text-align: center;
   position: absolute;
-  top: 300px;
+  top: 50vh;
   left: -4%;
   width: 100%;
   color: white;
