--- a/css/main.css
+++ b/css/main.css
@@ -248,8 +248,6 @@ h1 {
 .realisation img {
   margin: auto;
   min-width: 100%;
-  /*max-height: 400px;*/
-  /*border: 1px solid red;*/
 }
 
 .carousel .carouselslide {
@@ -280,6 +278,14 @@ h1 {
 66.66%, 71% {left: -600%; /*7ème image*/}
 77.77%, 82% {left: -700%; /*8ème image*/}
 88.88%, 98% {left: -800%; /*9ème image*/}
+}
+
+
+
+.carouselslide p{
+  display: none;
+  opacity: 0;
+  /*transition: 3s;*/
 }
 
 
@@ -557,7 +563,7 @@ $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
 
   	/*CSS3 keyframes animation*/
   	animation-name: AutoSlide;
-  	animation-duration: 18s;
+  	animation-duration: 24s;
   	animation-iteration-count: infinite;
   	animation-timing-function: ease-in-out;
   }
@@ -568,6 +574,52 @@ $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
   66.66%, 81% {left: -200%; /*image 7, 8, 9*/}
   }
 
+
+  /*CAROUSEL EFFET HOVER !!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
+
+  .carouselslide img:hover + p,
+  .carouselslide img:active + p {
+    display: flex;
+    flex-flow: column nowrap;
+    width: 33.33333%;
+    height: 100%;
+    text-align: center;
+    position: absolute;
+    margin: auto;
+    justify-content: center;
+    color: white;
+    z-index: 1;
+    background-color: #3F4847;
+    background-color: #E33849;
+    opacity: 0.8;
+    line-height: 30px;
+  }
+
+  .carouselslide p span {
+    font-size: 1.4em;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    font-weight: bolder;
+    border-bottom: 2px solid white;
+  }
+
+  .carouselslide img:first-child:hover + p {left: 0;}
+
+  .carouselslide img:nth-of-type(2):hover + p {left: 33.333333%;}
+
+  .carouselslide img:nth-of-type(3):hover + p {left: 66.666666%;}
+
+  .carouselslide img:nth-of-type(4):hover + p {left: 100%;}
+
+  .carouselslide img:nth-of-type(5):hover + p {left: 133.333333%;}
+
+  .carouselslide img:nth-of-type(6):hover + p {left: 166.666666%;}
+
+  .carouselslide img:nth-of-type(7):hover + p {left: 200%;}
+
+  .carouselslide img:nth-of-type(8):hover + p {left: 233.333333%;}
+
+  .carouselslide img:nth-of-type(9):hover + p {left: 266.6666666%;}
 
 /********************Prestations*************/
 .packages {
