main.css: desktop details problems fixed

--- a/css/main.css
+++ b/css/main.css
@@ -312,6 +312,7 @@ h1 {
   padding: 24px;
   /*z-index: 1;*/
   font-family: arial;
+  font-size: 14px
 /*  display: flex;
   flex-flow: row wrap;*/
 }
@@ -377,7 +378,7 @@ h1 {
   color: #3F4847;
   font-weight: bold;
   height: 48px;
-  width: 50%;
+  width: 60%;
   /*margin-left: 20%;*/
   margin: 10% 0 0 20%;
   /*display: flex;
@@ -756,6 +757,13 @@ $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
   /********************Prestations*************/
 .packages {
   width: 18%;
+  height: 450px;
+}
+
+
+/*********************Contact******************/
+.formulaire li i {
+  left: 71%;
 }
 
 }
