--- a/css/main.css
+++ b/css/main.css
@@ -528,10 +528,62 @@ $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
 
   h1 {
     left: -1%;
+    z-index: 8;
+  }
+
+  body>div {
+    z-index: 4;
+    position: relative;
   }
 
 /******************Menu*****************************/
+ .hamburger {
+   display: none;
+ }
 
+
+ .burger-menu ul:hover {
+   border-top: none;
+ }
+
+ .burger-menu ul{
+   display: flex;
+   width: 100%;
+   position: fixed;
+   top: 0;
+   flex-flow: row wrap;
+   justify-content: center;
+   background-color: #3F4847;
+   padding: 10px 0;
+   margin-top: 0;
+   text-align: center;
+ }
+
+.burger-menu ul li {
+  min-width: 30%;
+}
+
+#social {
+  /*background-color: none;*/
+}
+
+#social ul  {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  right: 5px;
+  top: 35vh;
+  width: auto;
+  background-color: white;
+}
+
+#social ul li {
+ margin-top: 10px;
+}
+
+#social li i {
+  color: #E33849;
+}
 
   /****************présentation**************************/
 
