--- a/css/main.css
+++ b/css/main.css
@@ -586,36 +586,6 @@ $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
 
 #social li i {
   color: #E33849;
-
-/****************Menu******************************/
-
-#burger-shower, .hamburger {
-  display: none;
-}
-
-.burger-menu {
-  position: fixed;
-  top: 0;
-  /*left: 0;*/
-  z-index: 2;
-  display: block;
-}
-
-.burger-menu ul {
-  display: flex;
-  background-color: #3F4847;
-  list-style-type: none;
-  margin: auto;
-  flex-direction: row;
-  flex-wrap: wrap;
-  /*justify-content: center;*/
-  /*align-content: center;*/
-  width: 100%;
-}
-
-.burger-menu ul li a{
-  color: #E33849;
-  padding: 1em 3em;
 }
 
   /****************présentation**************************/
@@ -798,7 +768,7 @@ $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
     margin-left: auto;
   }
 
-  main .section {
+  main section {
     width: 100%;
   }
 
@@ -806,7 +776,9 @@ $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
 
   .burger-menu {
     display: flex;
+    /*flex-direction: column;*/
     position: fixed;
+    align-content: center;
     top: 0;
     left: 0;
     height: 100vh;
@@ -814,22 +786,27 @@ $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
     background-color: #E33849;
     opacity: 0.8;
     font-size: 1em;
+    justify-content: center;
   }
 
   .burger-menu > ul {
+    margin: 5vh auto auto auto!important;
     font-weight: bolder;
     display: flex;
     flex-flow: column nowrap;
-    align-content:space-around;
-    margin: auto;
-    height: auto;
-    width: 80%;
+    height: 80%;
+    background-color: inherit;
+    width: 15%;
+    text-align: left;
   }
+
+
 
 
   .burger-menu ul:hover {
     border: none;
   }
+
 
   .burger-menu a:hover {
     border-left: 3px solid #3F4847;
@@ -838,14 +815,30 @@ $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
     color: #3F4847;
   }
 
-  .burger-menu ul ul {
-    padding-left: 0;
-    margin-top: 50px;
+  .burger-menu #social ul a:hover {
+    border: none;
+    padding-left: 0px;
+    margin-left: 0px;
+
+  }
+
+  .burger-menu ul #social ul {
+    position: absolute;
+    width: auto;
+    display: flex;
+    flex-flow: row nowrap;
+    height: 40px;
+    background-color: inherit;
+    top: -10px;
     width: auto;
   }
 
   .menu i {
-    display: none;
+    width: 15px;
+    border-radius: 25px;
+    text-align: center;
+    background-color: white;
+    padding: 10px;
   }
 
   /********************Prestations*************/
